--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -17,7 +17,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt\n",
+    "!pip install pipenv\n",
+    "!pipenv install --user --skip-lock\n",
     "!nbstripout --install"
    ]
   },
@@ -51,8 +52,7 @@
     "print(f\"GPU is{' ' if tf.config.list_physical_devices('GPU') else ' not '}available on the device\")\n",
     "\n",
     "IMAGES = 7400\n",
-    "API_KEY = \"24844585-de839c0e13ca422a989916f16\"\n",
-    "WORK_DIR = \"./drive/MyDrive\""
+    "API_KEY = \"24844585-de839c0e13ca422a989916f16\""
    ]
   },
   {
@@ -63,7 +63,7 @@
     }
    },
    "source": [
-    "Run following cell to set up in Google Colab environment:"
+    "#### Run following cell to set up in Google Colab environment:"
    ]
   },
   {
@@ -79,7 +79,8 @@
     "from google.colab import drive\n",
     "\n",
     "\n",
-    "drive.mount(\"./drive\")"
+    "drive.mount(\"./drive\")\n",
+    "WORK_DIR = \"./drive/MyDrive/Hogweb\""
    ]
   },
   {
@@ -98,7 +99,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "WORK_DIR = \"./data\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,7 +143,7 @@
     "    print_images_line(*[image for image in sample(images, num)])\n",
     "\n",
     "def print_images_from_dir(path: str, num: int = 5):\n",
-    "    print_images_line(*[imread(image) for image in sample(listdir(f\"{WORK_DIR}/{path}\"), num)])"
+    "    print_images_line(*[imread(image) for image in sample(listdir(f\"/{path}\"), num)])"
    ]
   },
   {
@@ -159,7 +162,8 @@
     "\n",
     "Plant images available [here](https://www.inaturalist.org/observations/export) after signing in iNaturalist.\n",
     "Use this request `has[]=photos&quality_grade=any&identifications=any&iconic_taxa[]=Plantae&projects[]=leningrad-oblast-flora` to retrieve different plant images.\n",
-    "Use this request `has[]=photos&quality_grade=any&identifications=any&iconic_taxa[]=Plantae&taxon_id=499936` to retrieve hogweed images."
+    "Use this request `has[]=photos&quality_grade=any&identifications=any&iconic_taxa[]=Plantae&taxon_id=499936` to retrieve hogweed images.\n",
+    "Please make sure `.csv` files received using given requests are placed in `./datasets` directory before running the following cell:"
    ]
   },
   {
@@ -210,12 +214,11 @@
    },
    "outputs": [],
    "source": [
-    "from os import makedirs, listdir, remove, system\n",
-    "from shutil import rmtree, move\n",
-    "from tqdm.notebook import trange, tqdm\n",
+    "from tqdm.notebook import trange\n",
+    "from os import makedirs, system\n",
     "from pandas import read_csv\n",
+    "from shutil import rmtree\n",
     "from requests import get\n",
-    "from torch.utils.data import random_split\n",
     "\n",
     "\n",
     "def clear_path(path: str) -> str:\n",
@@ -223,39 +226,35 @@
     "  makedirs(path)\n",
     "  return path\n",
     "\n",
-    "def split_set(dir):\n",
-    "  only_set = listdir(f\"./drive/MyDrive/Hogweb/train/{dir}\")\n",
-    "  train_set, test_set = random_split(only_set, [int(0.8 * len(only_set)), int(0.2 * len(only_set))])\n",
-    "  for file in test_set:\n",
-    "    move(f\"./drive/MyDrive/Hogweb/train/{dir}/{file}\", f\"./drive/MyDrive/Hogweb/test/{dir}/{file}\")\n",
-    "\n",
     "\n",
     "print(f\"Train set should contain {IMAGES} hogweed and {IMAGES} other plants images, should also contain {IMAGES} miscellaneous images\")\n",
     "\n",
-    "print(\"Preparing 'train' directory\")\n",
-    "clear_path(\"./drive/MyDrive/Hogweb/train/hogweed\")\n",
-    "clear_path(\"./drive/MyDrive/Hogweb/train/cetera\")\n",
-    "clear_path(\"./drive/MyDrive/Hogweb/train/other\")\n",
+    "print(\"Preparing directories\")\n",
+    "clear_path(f\"{WORK_DIR}/hogweed\")\n",
+    "clear_path(f\"{WORK_DIR}/cetera\")\n",
+    "clear_path(f\"{WORK_DIR}/other\")\n",
     "\n",
-    "frame = read_csv(\"./drive/MyDrive/Hogweb/hogweed.csv\")\n",
-    "\n",
-    "print(f\"Downloading hogweed images from iNaturalist ({IMAGES})\")\n",
+    "frame = read_csv(\"./datasets/hogweed.csv\")\n",
+    "'''\n",
+    "print(f\"Downloading hogweed images from iNaturalist\")\n",
     "for index, url in zip(trange(IMAGES, desc=\"Downloading\", unit=\"img\"), frame[\"image_url\"].sample(IMAGES)):\n",
-    "  with open(f\"./drive/MyDrive/Hogweb/train/hogweed/img{index}.jpg\", \"wb\") as f:\n",
+    "  with open(f\"{WORK_DIR}/hogweed/img{index}.jpg\", \"wb\") as f:\n",
     "    f.write(get(url).content)\n",
-    "\n",
+    "'''\n",
     "print(\"iNaturalist dataset hogweed photo samples:\")\n",
-    "print_images_from_dir(\"./drive/MyDrive/Hogweb/train/hogweed\")\n",
+    "print_images_from_dir(f\"{WORK_DIR}/hogweed\")\n",
     "\n",
-    "frame = read_csv(\"./drive/MyDrive/Hogweb/regional.csv\")\n",
+    "frame = read_csv(\"./datasets/regional.csv\")\n",
     "\n",
-    "print(f\"Downloading cetera images from iNaturalist ({IMAGES})\")\n",
+    "print(f\"Downloading cetera images from iNaturalist\")\n",
     "for index, url in zip(trange(IMAGES, desc=\"Downloading\", unit=\"img\"), frame[frame[\"scientific_name\"] != \"Heracleum sosnowskyi\"][\"image_url\"].sample(IMAGES)):\n",
-    "  with open(f\"./drive/MyDrive/Hogweb/train/cetera/img{index}.jpg\", \"wb\") as f:\n",
+    "  with open(f\"{WORK_DIR}/cetera/img{index}.jpg\", \"wb\") as f:\n",
     "    f.write(get(url).content)\n",
     "\n",
     "print(\"iNaturalist dataset other plants photo samples:\")\n",
-    "print_images_from_dir(\"./drive/MyDrive/Hogweb/train/cetera\")\n",
+    "print_images_from_dir(f\"{WORK_DIR}/cetera\")\n",
+    "\n",
+    "'''\n",
     "\n",
     "print(f\"Downloading other train images from Pixabay ({IMAGES})\")\n",
     "urls = []\n",
@@ -270,17 +269,15 @@
     "print(\"Pixabay dataset miscellaneous photo samples:\")\n",
     "print_images_from_dir(\"./drive/MyDrive/Hogweb/train/other\")\n",
     "\n",
-    "print(\"Preparing 'test' directory\")\n",
-    "clear_path(\"./drive/MyDrive/Hogweb/test/hogweed\")\n",
-    "clear_path(\"./drive/MyDrive/Hogweb/test/cetera\")\n",
-    "clear_path(\"./drive/MyDrive/Hogweb/test/other\")\n",
+    "'''\n",
     "\n",
-    "print(\"Filling with hogweed photos\")\n",
-    "split_set(\"hogweed\")\n",
-    "print(\"Filling with cetera photos\")\n",
-    "split_set(\"cetera\")\n",
-    "print(\"Filling with other photos\")\n",
-    "split_set(\"other\")\n",
+    "print(f\"Downloading other train images from Unsplash\")\n",
+    "for index, url in zip(trange(IMAGES, desc=\"Downloading\", unit=\"img\"), [f\"https://source.unsplash.com/random/200x200?sig={num}\" for num in range(IMAGES)]):\n",
+    "  with open(f\"{WORK_DIR}/other/img{index}.jpg\", \"wb\") as f:\n",
+    "    f.write(get(url).content)\n",
+    "\n",
+    "print(\"Random images dataset miscellaneous photo samples:\")\n",
+    "print_images_from_dir(f\"{WORK_DIR}/other\")\n",
     "\n",
     "print(\"Removing ipynb caches\")\n",
     "system(\"rm -rf `find -type d -name .ipynb_checkpoints`\")"
