--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dependencies installing and environment initialization:"
+    "#### Dependencies installing and environment initialization:\n",
+    "Run following code in console, not in jupyter server; then launch server using fresh-created virtual environment."
    ]
   },
   {
@@ -17,8 +18,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install pipenv\n",
-    "!pipenv install --user --skip-lock\n",
+    "!pip install --user pipenv\n",
+    "!pipenv install --skip-lock\n",
     "!nbstripout --install"
    ]
   },
@@ -120,7 +121,7 @@
    },
    "outputs": [],
    "source": [
-    "from matplotlib.pyplot import imread\n",
+    "from matplotlib.pyplot import imread, subplots, close\n",
     "from matplotlib.axes import Axes\n",
     "from random import sample\n",
     "from os import listdir\n",
@@ -143,7 +144,7 @@
     "    print_images_line(*[image for image in sample(images, num)])\n",
     "\n",
     "def print_images_from_dir(path: str, num: int = 5):\n",
-    "    print_images_line(*[imread(image) for image in sample(listdir(f\"/{path}\"), num)])"
+    "    print_images_line(*[imread(f\"{path}/{image}\") for image in sample(listdir(path), num)])"
    ]
   },
   {
@@ -155,15 +156,17 @@
    },
    "source": [
     "#### Use following links to access image sets:\n",
-    "Random images: `https://pixabay.com/api/?key={{YOUR_API_KEY}}&image_type=photo&q={{WORD}}&per_page=100&page={{PAGE_NUMBER}}`, where:\n",
-    "* `YOUR_API_KEY` is api key, available [here](https://pixabay.com/api/docs) after signing in Pixabay.\n",
-    "* `WORD` is a word, that will be used as seed to retrieve pictures.\n",
-    "* `PAGE_NUMBER` is a number of page.\n",
+    "Random images available [here](https://storage.googleapis.com/openimages/2018_04/validation/validation-images-with-rotation.csv).\n",
+    "It is a validation set of [OpenImages](https://storage.googleapis.com/openimages/web/index.html) dataset, it will be enough for our purposes.\n",
     "\n",
     "Plant images available [here](https://www.inaturalist.org/observations/export) after signing in iNaturalist.\n",
-    "Use this request `has[]=photos&quality_grade=any&identifications=any&iconic_taxa[]=Plantae&projects[]=leningrad-oblast-flora` to retrieve different plant images.\n",
-    "Use this request `has[]=photos&quality_grade=any&identifications=any&iconic_taxa[]=Plantae&taxon_id=499936` to retrieve hogweed images.\n",
-    "Please make sure `.csv` files received using given requests are placed in `./datasets` directory before running the following cell:"
+    "* Use this request `has[]=photos&quality_grade=any&identifications=any&iconic_taxa[]=Plantae&projects[]=leningrad-oblast-flora` to retrieve different plant images.\n",
+    "* Use this request `has[]=photos&quality_grade=any&identifications=any&iconic_taxa[]=Plantae&taxon_id=499936` to retrieve hogweed images.\n",
+    "\n",
+    "Please make sure `.csv` files received using given requests and links are placed in `./datasets` directory before running the following cell, making sure:\n",
+    "* The random image dataset file name should be `random.csv`.\n",
+    "* The hogweed image dataset file name should be `hogweed.csv`.\n",
+    "* The other plants image dataset file name should be `regional.csv`."
    ]
   },
   {
@@ -210,24 +213,54 @@
      ]
     },
     "id": "jIskVGQaSDlD",
-    "outputId": "0b3449e5-50a8-4984-8b41-f6b20bd0b0fa"
+    "outputId": "0b3449e5-50a8-4984-8b41-f6b20bd0b0fa",
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
-    "from tqdm.notebook import trange\n",
+    "from imagehash import average_hash\n",
     "from os import makedirs, system\n",
+    "from tqdm.notebook import tqdm\n",
     "from pandas import read_csv\n",
     "from shutil import rmtree\n",
     "from requests import get\n",
+    "from io import BytesIO\n",
     "\n",
     "\n",
     "def clear_path(path: str) -> str:\n",
-    "  rmtree(path, ignore_errors=True)\n",
-    "  makedirs(path)\n",
-    "  return path\n",
+    "    rmtree(path, ignore_errors=True)\n",
+    "    makedirs(path)\n",
+    "    return path\n",
+    "\n",
+    "def download_and_save(img_source: str, img_type: str, count: int, source: [str]):\n",
+    "    print(f\"Downloading {img_type} images from {img_source}\")\n",
+    "    img_hashes = set()\n",
+    "    img_code = 0\n",
+    "\n",
+    "    with tqdm(total=count, desc=\"Downloading\", unit=\"img\") as bar:\n",
+    "        while len(img_hashes) < count:\n",
+    "            if img_code >= len(source):\n",
+    "                raise RuntimeError(f\"The source set contains only {len(source)} elements, {img_code}th was requested!\")\n",
+    "            else:\n",
+    "                try:\n",
+    "                    img_content = Image.open(BytesIO(get(source[img_code]).content))\n",
+    "                    img_hash = average_hash(img_content)\n",
+    "                    if img_hash not in img_hashes:\n",
+    "                        img_hashes.add(img_hash)\n",
+    "                        img_content.save(f\"{WORK_DIR}/{img_type}/img{img_code}.jpg\")\n",
+    "                        bar.update()\n",
+    "                finally:\n",
+    "                    img_code += 1\n",
+    "                    continue\n",
+    "\n",
+    "    print(f\"Downloaded {img_code + 1} images finished, {img_code + 1 - count} collisions found\")\n",
+    "    print(f\"{img_source} dataset {img_type} image samples:\")\n",
+    "    print_images_from_dir(f\"{WORK_DIR}/{img_type}\")\n",
     "\n",
     "\n",
-    "print(f\"Train set should contain {IMAGES} hogweed and {IMAGES} other plants images, should also contain {IMAGES} miscellaneous images\")\n",
+    "print(f\"Train set should contain hogweed, cetera and other images, {IMAGES} of each kind\")\n",
     "\n",
     "print(\"Preparing directories\")\n",
     "clear_path(f\"{WORK_DIR}/hogweed\")\n",
@@ -235,49 +268,13 @@
     "clear_path(f\"{WORK_DIR}/other\")\n",
     "\n",
     "frame = read_csv(\"./datasets/hogweed.csv\")\n",
-    "'''\n",
-    "print(f\"Downloading hogweed images from iNaturalist\")\n",
-    "for index, url in zip(trange(IMAGES, desc=\"Downloading\", unit=\"img\"), frame[\"image_url\"].sample(IMAGES)):\n",
-    "  with open(f\"{WORK_DIR}/hogweed/img{index}.jpg\", \"wb\") as f:\n",
-    "    f.write(get(url).content)\n",
-    "'''\n",
-    "print(\"iNaturalist dataset hogweed photo samples:\")\n",
-    "print_images_from_dir(f\"{WORK_DIR}/hogweed\")\n",
+    "download_and_save(\"iNaturalist\", \"hogweed\", IMAGES, frame[\"image_url\"])\n",
     "\n",
     "frame = read_csv(\"./datasets/regional.csv\")\n",
+    "download_and_save(\"iNaturalist\", \"cetera\", IMAGES, frame[frame[\"scientific_name\"] != \"Heracleum sosnowskyi\"][\"image_url\"])\n",
     "\n",
-    "print(f\"Downloading cetera images from iNaturalist\")\n",
-    "for index, url in zip(trange(IMAGES, desc=\"Downloading\", unit=\"img\"), frame[frame[\"scientific_name\"] != \"Heracleum sosnowskyi\"][\"image_url\"].sample(IMAGES)):\n",
-    "  with open(f\"{WORK_DIR}/cetera/img{index}.jpg\", \"wb\") as f:\n",
-    "    f.write(get(url).content)\n",
-    "\n",
-    "print(\"iNaturalist dataset other plants photo samples:\")\n",
-    "print_images_from_dir(f\"{WORK_DIR}/cetera\")\n",
-    "\n",
-    "'''\n",
-    "\n",
-    "print(f\"Downloading other train images from Pixabay ({IMAGES})\")\n",
-    "urls = []\n",
-    "words = [\"emotion\", \"television\", \"mall\", \"science\", \"addition\", \"analyst\", \"manufacturer\", \"song\", \"cheek\", \"flight\", \"aspect\", \"profession\", \"payment\", \"president\", \"preparation\", \"love\", \"climate\", \"desk\", \"security\", \"storage\"]\n",
-    "for word in words:\n",
-    "  for i in range(5):\n",
-    "    urls += list(map(lambda obj: obj[\"webformatURL\"], get(f\"https://pixabay.com/api/?key={API_KEY}&image_type=photo&q={word}&per_page=100&page={i + 1}\").json()[\"hits\"]))\n",
-    "for index, url in zip(trange(IMAGES, desc=\"Downloading\", unit=\"img\"), urls):\n",
-    "  with open(f\"./drive/MyDrive/Hogweb/train/other/img{index}.jpg\", \"wb\") as f:\n",
-    "    f.write(get(url).content)\n",
-    "\n",
-    "print(\"Pixabay dataset miscellaneous photo samples:\")\n",
-    "print_images_from_dir(\"./drive/MyDrive/Hogweb/train/other\")\n",
-    "\n",
-    "'''\n",
-    "\n",
-    "print(f\"Downloading other train images from Unsplash\")\n",
-    "for index, url in zip(trange(IMAGES, desc=\"Downloading\", unit=\"img\"), [f\"https://source.unsplash.com/random/200x200?sig={num}\" for num in range(IMAGES)]):\n",
-    "  with open(f\"{WORK_DIR}/other/img{index}.jpg\", \"wb\") as f:\n",
-    "    f.write(get(url).content)\n",
-    "\n",
-    "print(\"Random images dataset miscellaneous photo samples:\")\n",
-    "print_images_from_dir(f\"{WORK_DIR}/other\")\n",
+    "frame = read_csv(\"./datasets/random.csv\")\n",
+    "download_and_save(\"UnSplash\", \"other\", IMAGES, frame[\"OriginalURL\"])\n",
     "\n",
     "print(\"Removing ipynb caches\")\n",
     "system(\"rm -rf `find -type d -name .ipynb_checkpoints`\")"
