transfer learning semi-fixed

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -56,7 +56,9 @@
     "API_KEY = \"24844585-de839c0e13ca422a989916f16\"\n",
     "\n",
     "BATCH_SIZE = 32\n",
-    "IMG_SIZE = (224, 224)"
+    "IMG_SIZE = (299, 299)\n",
+    "\n",
+    "INITIAL_EPOCHS = 16"
    ]
   },
   {
@@ -248,11 +250,11 @@
     "                raise RuntimeError(f\"The source set contains only {len(source)} elements, {img_code}th was requested!\")\n",
     "            else:\n",
     "                try:\n",
-    "                    img_content = Image.open(BytesIO(get(source[img_code]).content))\n",
-    "                    img_hash = average_hash(img_content)\n",
-    "                    if img_hash not in img_hashes:\n",
+    "                    img_data = Image.open(BytesIO(get(source[img_code]).content))\n",
+    "                    img_hash = average_hash(img_data)\n",
+    "                    if img_hash not in img_hashes and img_data.size[0] <= IMG_SIZE[0] and img_data.size[1] <= IMG_SIZE[1]:\n",
     "                        img_hashes.add(img_hash)\n",
-    "                        img_content.save(f\"{IMAGE_DIR}/{img_type}/img{img_code}.jpg\")\n",
+    "                        img_data.save(f\"{IMAGE_DIR}/{img_type}/{img_type}{img_code}.jpg\")\n",
     "                        bar.update()\n",
     "                finally:\n",
     "                    img_code += 1\n",
@@ -336,29 +338,29 @@
    },
    "outputs": [],
    "source": [
-    "from tensorflow.keras.applications.efficientnet import EfficientNetB7, preprocess_input\n",
+    "from tensorflow.keras.applications.xception import preprocess_input, Xception\n",
     "from tensorflow.keras.layers import GlobalAveragePooling2D, Dense, Dropout\n",
     "from tensorflow.keras.losses import BinaryCrossentropy\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras import Input, Model\n",
     "\n",
     "\n",
-    "INPUT_SHAPE = IMG_SIZE + (3,)\n",
+    "INPUT_SHAPE = IMG_SIZE + [3]\n",
     "\n",
-    "base_model = EfficientNetB7(input_shape=INPUT_SHAPE, include_top=False)\n",
-    "base_model.trainable = False\n",
-    "\n",
-    "\n",
-    "inputs = Input(shape=INPUT_SHAPE, name=\"ReShaper\")\n",
+    "inputs = Input(shape=INPUT_SHAPE, name=\"re_shaper\")\n",
     "x = data_augmentation(inputs)\n",
     "x = preprocess_input(x)\n",
-    "x = base_model(x, training=False)\n",
-    "x = GlobalAveragePooling2D(name=\"Pooling\")(x)\n",
-    "x = Dropout(0.2, name=\"Dropout\")(x)\n",
-    "outputs = Dense(1, name=\"PredictorReLU\")(x)\n",
-    "model = Model(inputs, outputs, name=\"HogWeedDetector\")\n",
+    "x = Xception(input_shape=INPUT_SHAPE, include_top=False)(x, training=False)\n",
+    "x = GlobalAveragePooling2D(name=\"pooling\")(x)\n",
+    "x = Dropout(0.2, name=\"dropout\")(x)\n",
+    "# TODO: check activation function (maybe softmax)!\n",
+    "outputs = Dense(1, activation='relu', name=\"predictor_relu\")(x)\n",
+    "model = Model(inputs, outputs, name=\"hogweed_detector\")\n",
     "\n",
     "\n",
+    "# TODO: check learning rate!\n",
+    "# TODO: check optimizer!\n",
+    "# TODO: check loss function!\n",
     "base_learning_rate = 0.0001\n",
     "model.compile(optimizer=Adam(learning_rate=base_learning_rate), loss=BinaryCrossentropy(), metrics=['accuracy'])\n",
     "\n",
@@ -370,15 +372,14 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
    "outputs": [],
    "source": [
+    "from tensorflow.python.keras.callbacks import Callback, EarlyStopping\n",
     "from IPython.core.display_functions import display, update_display\n",
     "from tensorflow.python.data.experimental import cardinality\n",
-    "from tensorflow.python.keras.callbacks import Callback\n",
     "from matplotlib.pyplot import subplots, close\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
@@ -414,6 +415,7 @@
     "        self.epoch_display_id = \"epoch_graph\"\n",
     "        close()\n",
     "\n",
+    "        self.epochs_bar = None\n",
     "        self.batches_bar = None\n",
     "\n",
     "    def redraw_graph(self, figure, graph, display_id, losses_arr, accuracy_arr):\n",
@@ -440,7 +442,10 @@
     "        display(self.batch_figure, display_id=self.batch_display_id)\n",
     "        display(self.epoch_figure, display_id=self.epoch_display_id)\n",
     "\n",
+    "        self.epochs_bar = tqdm(desc=\"Training\", unit=\"epoch\", total=INITIAL_EPOCHS)\n",
+    "\n",
     "    def on_epoch_begin(self, epoch, logs=None):\n",
+    "        self.epochs_bar.update()\n",
     "        self.batches_bar = tqdm(desc=\"Training\", unit=\"batch\", total=cardinality(train_dataset).numpy())\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
@@ -463,9 +468,12 @@
     "        self.batches_bar.set_description(f\"Loss: {round(logs['loss'], 3)}; Accuracy: {round(logs['accuracy'] * 100, 3)}\")\n",
     "        self.batches_bar.update()\n",
     "\n",
+    "    def on_train_end(self, logs=None):\n",
+    "        self.epochs_bar.close()\n",
     "\n",
-    "initial_epochs = 10\n",
-    "model.fit(train_dataset, epochs=initial_epochs, validation_data=test_dataset, verbose=0, callbacks=[CustomCallback()])"
+    "\n",
+    "\n",
+    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=[CustomCallback(), EarlyStopping(patience=3, restore_best_weights=True)])"
    ]
   },
   {
@@ -497,7 +505,7 @@
     "from tensorflow.lite.python.lite import TFLiteConverter\n",
     "\n",
     "\n",
-    "with open(f\"{MODEL_DIR}/HogWeedDetector.tflite\", 'wb') as file:\n",
+    "with open(f\"{MODEL_DIR}/detector{history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
     "    lite_model = tf.lite.TFLiteConverter.from_keras_model(model).convert()\n",
     "    file.write(lite_model)"
    ]
@@ -516,35 +524,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "from torch import no_grad, unsqueeze\n",
-    "from torch.nn.functional import softmax\n",
-    "from PIL import Image\n",
-    "from os import listdir\n",
-    "import torch.nn.functional as F\n",
-    "from torch.autograd import Variable\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchvision.transforms import Resize, Compose, ToTensor\n",
-    "\n",
-    "\n",
-    "def predict(file):  \n",
-    "  # Set model to evaluate mode\n",
-    "  model.eval()   \n",
-    "  \n",
-    "  transform = Compose([Resize((224, 224)), ToTensor()])\n",
-    "  image = Image.open(file).convert('RGB')\n",
-    "  prep = transform(image)\n",
-    "  batch = unsqueeze(prep, 0)\n",
-    "\n",
-    "  with no_grad():\n",
-    "    perc = softmax(model(batch), dim=1)\n",
-    "  return perc\n",
-    "\n",
-    "print(train_set.classes)\n",
-    "lst = sorted(listdir(\"./drive/MyDrive/Hogweed/test/hogweed\"))\n",
-    "for img in lst:\n",
-    "  print(f\"{img}: {predict(f'./drive/MyDrive/Hogweed/test/hogweed/{img}')}\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
