validation dataset added

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -273,16 +273,39 @@
     "clear_path(f\"{IMAGE_DIR}/other\")\n",
     "\n",
     "frame = read_csv(\"./datasets/hogweed.csv\")\n",
-    "download_and_save(\"iNaturalist\", \"hogweed\", IMAGES, frame[\"image_url\"])\n",
+    "download_and_save(\"iNaturalist\", \"hogweed\", IMAGES, frame[frame[\"license\"] != \"CC0\"][\"image_url\"])\n",
     "\n",
     "frame = read_csv(\"./datasets/cetera.csv\")\n",
-    "download_and_save(\"iNaturalist\", \"cetera\", IMAGES, frame[frame[\"scientific_name\"] != \"Heracleum sosnowskyi\"][\"image_url\"])\n",
+    "download_and_save(\"iNaturalist\", \"cetera\", IMAGES, frame[(frame[\"license\"] != \"CC0\") & (frame[\"scientific_name\"] != \"Heracleum sosnowskyi\")][\"image_url\"])\n",
     "\n",
     "frame = read_csv(\"./datasets/other.csv\")\n",
     "download_and_save(\"UnSplash\", \"other\", IMAGES, frame[\"OriginalURL\"])\n",
     "\n",
     "print(\"Removing ipynb caches\")\n",
     "system(\"rm -rf `find -type d -name .ipynb_checkpoints`\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pandas import read_csv, DataFrame\n",
+    "\n",
+    "\n",
+    "frame = read_csv(\"./datasets/hogweed.csv\")\n",
+    "hogweed_frame = frame[frame[\"license\"] == \"CC0\"].sample(50)[\"image_url\"]\n",
+    "frame = read_csv(\"./datasets/cetera.csv\")\n",
+    "cetera_frame = frame[(frame[\"scientific_name\"] != \"Heracleum sosnowskyi\") & (frame[\"license\"] == \"CC0\")].sample(50)[\"image_url\"]\n",
+    "\n",
+    "URLs = hogweed_frame.to_list() + cetera_frame.to_list() + [f\"https://source.unsplash.com/random?sig={num}\" for num in range(50)]\n",
+    "classes = (['hogweed'] * 50) + (['cetera'] * 50) + (['other'] * 50)\n",
+    "DataFrame(list(zip(classes, URLs)), columns=['class', 'url']).to_csv(path_or_buf=\"./datasets/validation.csv\", index=False)"
    ]
   },
   {
@@ -498,7 +521,10 @@
      ]
     },
     "id": "opRLr_aov1Ly",
-    "outputId": "2a18f3c1-6fe8-4cf8-a5de-e8c24dd03cfb"
+    "outputId": "2a18f3c1-6fe8-4cf8-a5de-e8c24dd03cfb",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -514,11 +540,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "cifGFUyVv1L2",
-    "outputId": "9483be1b-febe-4506-b194-a44c5d5d18df",
     "pycharm": {
      "name": "#%%\n"
     }
