validation dataset added

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -329,7 +329,7 @@
     "from tensorflow import expand_dims\n",
     "\n",
     "\n",
-    "dataset = image_dataset_from_directory(IMAGE_DIR, shuffle=True, batch_size=BATCH_SIZE, image_size=IMG_SIZE)\n",
+    "dataset = image_dataset_from_directory(IMAGE_DIR, shuffle=True, label_mode='categorical', batch_size=BATCH_SIZE, image_size=IMG_SIZE)\n",
     "batches_num = cardinality(dataset)\n",
     "\n",
     "train_power = batches_num * 9 // 10\n",
@@ -363,31 +363,33 @@
    "source": [
     "from tensorflow.keras.applications.xception import preprocess_input, Xception\n",
     "from tensorflow.keras.layers import GlobalAveragePooling2D, Dense, Dropout\n",
-    "from tensorflow.keras.losses import BinaryCrossentropy\n",
+    "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras import Input, Model\n",
     "\n",
     "\n",
-    "INPUT_SHAPE = IMG_SIZE + [3]\n",
+    "INPUT_SHAPE = IMG_SIZE + (3,)\n",
+    "\n",
+    "base_model = Xception(input_shape=INPUT_SHAPE, include_top=False)\n",
+    "base_model.trainable = False\n",
     "\n",
     "inputs = Input(shape=INPUT_SHAPE, name=\"re_shaper\")\n",
     "x = data_augmentation(inputs)\n",
     "x = preprocess_input(x)\n",
-    "x = Xception(input_shape=INPUT_SHAPE, include_top=False)(x, training=False)\n",
+    "x = base_model(x, training=False)\n",
     "x = GlobalAveragePooling2D(name=\"pooling\")(x)\n",
     "x = Dropout(0.2, name=\"dropout\")(x)\n",
-    "# TODO: check activation function (maybe softmax)!\n",
-    "outputs = Dense(1, activation='relu', name=\"predictor_relu\")(x)\n",
+    "outputs = Dense(3, name=\"predictor\")(x)\n",
     "model = Model(inputs, outputs, name=\"hogweed_detector\")\n",
-    "\n",
     "\n",
     "# TODO: check learning rate!\n",
     "# TODO: check optimizer!\n",
-    "# TODO: check loss function!\n",
-    "base_learning_rate = 0.0001\n",
-    "model.compile(optimizer=Adam(learning_rate=base_learning_rate), loss=BinaryCrossentropy(), metrics=['accuracy'])\n",
+    "base_learning_rate = 0.001\n",
+    "model.compile(optimizer=Adam(learning_rate=base_learning_rate), loss=CategoricalCrossentropy(), metrics=['accuracy'])\n",
     "\n",
-    "model.summary()"
+    "model.summary()\n",
+    "\n",
+    "model(training=False)"
    ]
   },
   {
@@ -468,7 +470,6 @@
     "        self.epochs_bar = tqdm(desc=\"Training\", unit=\"epoch\", total=INITIAL_EPOCHS)\n",
     "\n",
     "    def on_epoch_begin(self, epoch, logs=None):\n",
-    "        self.epochs_bar.update()\n",
     "        self.batches_bar = tqdm(desc=\"Training\", unit=\"batch\", total=cardinality(train_dataset).numpy())\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
@@ -482,6 +483,7 @@
     "\n",
     "        self.batches_bar.set_description(f\"Loss: {round(logs['loss'], 3)}; Accuracy: {round(logs['accuracy'] * 100, 3)}\")\n",
     "        self.batches_bar.close()\n",
+    "        self.epochs_bar.update()\n",
     "\n",
     "    def on_train_batch_end(self, batch, logs=None):\n",
     "        self.batch_train_losses.append(logs['loss'])\n",
@@ -531,7 +533,7 @@
     "from tensorflow.lite.python.lite import TFLiteConverter\n",
     "\n",
     "\n",
-    "with open(f\"{MODEL_DIR}/detector{history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
+    "with open(f\"{MODEL_DIR}/detector-{history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
     "    lite_model = tf.lite.TFLiteConverter.from_keras_model(model).convert()\n",
     "    file.write(lite_model)"
    ]
