--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -19,7 +19,8 @@
    "outputs": [],
    "source": [
     "!pip install --user pipenv\n",
-    "!pipenv install --skip-lock\n",
+    "!python -m pipenv install --skip-lock\n",
+    "!python -m pipenv shell\n",
     "!nbstripout --install"
    ]
   },
@@ -44,13 +45,16 @@
     "\n",
     "import tensorflow as tf\n",
     "\n",
+    "from tensorflow.python.framework.config import list_physical_devices\n",
+    "from tensorflow.python.platform.test import is_built_with_cuda\n",
+    "\n",
     "\n",
     "def is_gpu_available():\n",
-    "    return tf.config.list_physical_devices('GPU')\n",
+    "    return list_physical_devices('GPU')\n",
     "\n",
     "\n",
-    "print(f\"TensorFlow version: {tf.__version__}\")\n",
-    "print(f\"GPU is{' ' if tf.config.list_physical_devices('GPU') else ' not '}available on the device\")\n",
+    "print(f\"TensorFlow version: {tf.__version__}, built {'with' if is_built_with_cuda() else 'without'} CUDA\")\n",
+    "print(f\"GPU is{' ' if list_physical_devices('GPU') else ' not '}available on the device\")\n",
     "\n",
     "IMAGES = 7400\n",
     "API_KEY = \"24844585-de839c0e13ca422a989916f16\"\n",
