--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -13,13 +13,14 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
    "outputs": [],
    "source": [
     "!pip install --user pipenv\n",
-    "!python -m pipenv install --skip-lock\n",
+    "!mkdir venv && python -m pipenv install --skip-lock venv\n",
     "!python -m pipenv shell\n",
     "!nbstripout --install"
    ]
@@ -49,12 +50,11 @@
     "from tensorflow.python.platform.test import is_built_with_cuda\n",
     "\n",
     "\n",
-    "def is_gpu_available():\n",
-    "    return list_physical_devices('GPU')\n",
-    "\n",
-    "\n",
     "print(f\"TensorFlow version: {tf.__version__}, built {'with' if is_built_with_cuda() else 'without'} CUDA\")\n",
-    "print(f\"GPU is{' ' if list_physical_devices('GPU') else ' not '}available on the device\")\n",
+    "gpu_available = len(list_physical_devices('GPU')) != 0\n",
+    "print(f\"GPU is{' ' if gpu_available else ' not '}available on the device\")\n",
+    "if not gpu_available:\n",
+    "    print(\"Consider following the guide https://www.tensorflow.org/install/gpu for model training\")\n",
     "\n",
     "IMAGES = 7400\n",
     "API_KEY = \"24844585-de839c0e13ca422a989916f16\"\n",
@@ -156,7 +156,10 @@
     "    print_images_line([image for image in sample(images, num)])\n",
     "\n",
     "def print_images_from_dir(path: str, num: int = 5):\n",
-    "    print_images_line([imread(f\"{path}/{image}\") for image in sample(listdir(path), num)])"
+    "    print_images_line([imread(f\"{path}/{image}\") for image in sample(listdir(path), num)])\n",
+    "\n",
+    "def naturalize_urls(urls: list[str]) -> list[str]:\n",
+    "    return [url.replace(\"medium\", \"large\") for url in urls]"
    ]
   },
   {
@@ -225,7 +228,10 @@
      ]
     },
     "id": "jIskVGQaSDlD",
-    "outputId": "0b3449e5-50a8-4984-8b41-f6b20bd0b0fa"
+    "outputId": "0b3449e5-50a8-4984-8b41-f6b20bd0b0fa",
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -256,7 +262,7 @@
     "                try:\n",
     "                    img_data = Image.open(BytesIO(get(source[img_code]).content))\n",
     "                    img_hash = average_hash(img_data)\n",
-    "                    if img_hash not in img_hashes and img_data.size[0] <= IMG_SIZE[0] and img_data.size[1] <= IMG_SIZE[1]:\n",
+    "                    if img_hash not in img_hashes and img_data.size[0] >= IMG_SIZE[0] and img_data.size[1] >= IMG_SIZE[1]:\n",
     "                        img_hashes.add(img_hash)\n",
     "                        img_data.save(f\"{IMAGE_DIR}/{img_type}/{img_type}{img_code}.jpg\")\n",
     "                        bar.update()\n",
@@ -277,10 +283,12 @@
     "clear_path(f\"{IMAGE_DIR}/other\")\n",
     "\n",
     "frame = read_csv(\"./datasets/hogweed.csv\")\n",
-    "download_and_save(\"iNaturalist\", \"hogweed\", IMAGES, frame[frame[\"license\"] != \"CC0\"][\"image_url\"])\n",
+    "frame = frame[frame[\"license\"] != \"CC0\"][\"image_url\"]\n",
+    "download_and_save(\"iNaturalist\", \"hogweed\", IMAGES, naturalize_urls(frame.to_list()))\n",
     "\n",
     "frame = read_csv(\"./datasets/cetera.csv\")\n",
-    "download_and_save(\"iNaturalist\", \"cetera\", IMAGES, frame[(frame[\"license\"] != \"CC0\") & (frame[\"scientific_name\"] != \"Heracleum sosnowskyi\")][\"image_url\"])\n",
+    "frame = frame[(frame[\"license\"] != \"CC0\") & (frame[\"scientific_name\"] != \"Heracleum sosnowskyi\")][\"image_url\"]\n",
+    "download_and_save(\"iNaturalist\", \"cetera\", IMAGES, naturalize_urls(frame.to_list()))\n",
     "\n",
     "frame = read_csv(\"./datasets/other.csv\")\n",
     "download_and_save(\"UnSplash\", \"other\", IMAGES, frame[\"OriginalURL\"])\n",
@@ -307,7 +315,7 @@
     "frame = read_csv(\"./datasets/cetera.csv\")\n",
     "cetera_frame = frame[(frame[\"scientific_name\"] != \"Heracleum sosnowskyi\") & (frame[\"license\"] == \"CC0\")].sample(50)[\"image_url\"]\n",
     "\n",
-    "URLs = hogweed_frame.to_list() + cetera_frame.to_list() + [f\"https://source.unsplash.com/random?sig={num}\" for num in range(50)]\n",
+    "URLs = naturalize_urls(hogweed_frame.to_list()) + naturalize_urls(cetera_frame.to_list()) + [f\"https://source.unsplash.com/random?sig={num}\" for num in range(50)]\n",
     "classes = (['hogweed'] * 50) + (['cetera'] * 50) + (['other'] * 50)\n",
     "DataFrame(list(zip(classes, URLs)), columns=['class', 'url']).to_csv(path_or_buf=\"./datasets/validation.csv\", index=False)"
    ]
@@ -561,23 +569,23 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
