image size check disabled - whatever

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "from matplotlib.pyplot import imread, subplots, close\n",
-    "from IPython.core.display_functions import display\n",
+    "from IPython.display import display\n",
     "from matplotlib.axes import Axes\n",
     "from random import sample\n",
     "from os import listdir\n",
@@ -262,7 +262,7 @@
     "                try:\n",
     "                    img_data = Image.open(BytesIO(get(source[img_code]).content))\n",
     "                    img_hash = average_hash(img_data)\n",
-    "                    if img_hash not in img_hashes and img_data.size[0] >= IMG_SIZE[0] and img_data.size[1] >= IMG_SIZE[1]:\n",
+    "                    if img_hash not in img_hashes:\n",
     "                        img_hashes.add(img_hash)\n",
     "                        img_data.save(f\"{IMAGE_DIR}/{img_type}/{img_type}{img_code}.jpg\")\n",
     "                        bar.update()\n",
@@ -399,9 +399,7 @@
     "base_learning_rate = 0.001\n",
     "model.compile(optimizer=Adam(learning_rate=base_learning_rate), loss=CategoricalCrossentropy(), metrics=['accuracy'])\n",
     "\n",
-    "model.summary()\n",
-    "\n",
-    "model(training=False)"
+    "model.summary()"
    ]
   },
   {
@@ -415,8 +413,8 @@
    "outputs": [],
    "source": [
     "from tensorflow.python.keras.callbacks import Callback, EarlyStopping\n",
-    "from IPython.core.display_functions import display, update_display\n",
     "from tensorflow.python.data.experimental import cardinality\n",
+    "from IPython.display import display, update_display\n",
     "from matplotlib.pyplot import subplots, close\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
@@ -473,6 +471,7 @@
     "        graph.legend()\n",
     "        graph.grid(visible=True)\n",
     "\n",
+    "        figure.canvas.draw()\n",
     "        update_display(figure, display_id=display_id)\n",
     "\n",
     "    def on_train_begin(self, logs=None):\n",
@@ -548,6 +547,51 @@
     "with open(f\"{MODEL_DIR}/detector-{history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
     "    lite_model = tf.lite.TFLiteConverter.from_keras_model(model).convert()\n",
     "    file.write(lite_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import ipywidgets as ipy\n",
+    "from IPython.display import display, update_display\n",
+    "\n",
+    "\n",
+    "dh = display(display_id=\"epoch-figure\")\n",
+    "\n",
+    "epoch_figure, (epoch_train_graph, epoch_test_graph) = subplots(1, 2, figsize=(15, 5))\n",
+    "epoch_figure.suptitle(\"Accuracy/Loss graph\")\n",
+    "epoch_train_graph.set_title(\"Training\")\n",
+    "epoch_test_graph.set_title(\"Testing\")\n",
+    "for graph in (epoch_train_graph, epoch_test_graph):\n",
+    "    graph.set_xlabel(\"Epochs\")\n",
+    "    graph.set_ylabel(\"Accuracy/Losses\")\n",
+    "    graph.grid(visible=True)\n",
+    "#close(epoch_figure)\n",
+    "epoch_figure.show()\n",
+    "epoch_figure_id = \"epoch-figure\"\n",
+    "\n",
+    "#dh.display(epoch_figure)\n",
+    "losses_arr = [0, 3, 5, 7]\n",
+    "\n",
+    "graph.cla()\n",
+    "graph.plot(losses_arr, color='blue', label=\"losses\")\n",
+    "graph.scatter(len(losses_arr) - 1, losses_arr[-1], c='blue')\n",
+    "\n",
+    "graph.set_ylim(bottom=0)\n",
+    "graph.set_title(\"title\")\n",
+    "graph.set_xlabel(\"x_label\")\n",
+    "graph.set_ylabel(\"y_label\")\n",
+    "graph.legend()\n",
+    "graph.grid(visible=True)\n",
+    "\n",
+    "#dh.update(epoch_figure)"
    ]
   },
   {
