image size check disabled - whatever

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -150,7 +150,7 @@
     "        remove_axis(ax)\n",
     "        ax.imshow(images[ind])\n",
     "    display(fig)\n",
-    "    close()\n",
+    "    close(fig)\n",
     "\n",
     "def print_random_images(images: [Image], num: int = 5):\n",
     "    print_images_line([image for image in sample(images, num)])\n",
@@ -407,6 +407,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -437,7 +438,7 @@
     "        self.batch_train_graph.set_ylabel(\"Accuracy/Losses\")\n",
     "        self.batch_train_graph.grid(visible=True)\n",
     "        self.batch_display_id = \"batch_graph\"\n",
-    "        close()\n",
+    "        close(self.batch_figure)\n",
     "\n",
     "        self.epoch_figure, (self.epoch_train_graph, self.epoch_test_graph) = subplots(1, 2, figsize=(15, 5))\n",
     "        self.epoch_figure.suptitle(\"Accuracy/Loss graph\")\n",
@@ -448,7 +449,7 @@
     "            graph.set_ylabel(\"Accuracy/Losses\")\n",
     "            graph.grid(visible=True)\n",
     "        self.epoch_display_id = \"epoch_graph\"\n",
-    "        close()\n",
+    "        close(self.epoch_figure)\n",
     "\n",
     "        self.epochs_bar = None\n",
     "        self.batches_bar = None\n",
