test cell deleted

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -72,9 +72,7 @@
      "name": "#%% md\n"
     }
    },
-   "source": [
-    "#### Run following cell to set up in Google Colab environment:"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -112,7 +110,7 @@
    "outputs": [],
    "source": [
     "IMAGE_DIR = \"./data\"\n",
-    "MODEL_DIR = \"./model\""
+    "MODEL_DIR = \"./models\""
    ]
   },
   {
@@ -298,6 +296,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use this cell to regenerate `./datasets/validation.csv` file\n",
+    "It will contain 50 open source from each plant dataset (cetera, hogweed) + 50 open source images from [unsplash](https://unsplash.com/).\n",
+    "It is not guaranteed that unsplash images will be unique, but it's the only clearly open source image source was found.\n",
+    "\n",
+    "The generated file may be used with result testing script (`./test.py`) as follows: `python test.py -n ./models/[YOUR MODEL FILE NAME].tflite -s ./datasets/validation.csv`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -319,6 +328,11 @@
     "classes = (['hogweed'] * 50) + (['cetera'] * 50) + (['other'] * 50)\n",
     "DataFrame(list(zip(classes, URLs)), columns=['class', 'url']).to_csv(path_or_buf=\"./datasets/validation.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -364,6 +378,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -401,6 +420,11 @@
     "\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -512,6 +536,11 @@
     "\n",
     "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=[CustomCallback(), EarlyStopping(patience=3, restore_best_weights=True)])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
